--- a/config/database.yml
+++ b/config/database.yml
@@ -71,10 +71,8 @@ test:
 # You can use this database configuration with:
 #
 #   production:
-#     url: <%= ENV['DATABASE_URL'] %>
+#
 #
 production:
   <<: *default
-  database: quiz_production
-  username: quiz
-  password: <%= ENV['QUIZ_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
